# firecracker

./: CHANGELOG.md
resources/guest_configs/cpu/: x86_64_amd_user_config_template_example.json  x86_64_user_config_template_example.json
src/api_server/: Cargo.toml
src/api_server/src/: parsed_request.rs
src/api_server/src/request/: cpu_configuration.rs
src/api_server/tests/: api_server_integration_tests.rs
src/arch/src/x86_64/: msr.rs
src/bit-fields/: Cargo.toml
src/bit-fields-macros/: Cargo.toml
src/bit-fields-macros/src/: builder.rs  lib.rs  utils.rs
src/bit-fields/src/: errors.rs  lib.rs
src/construct/: Cargo.toml
src/construct-macros/: Cargo.toml
src/construct-macros/src/: lib.rs
src/construct/src/: lib.rs
src/cpuid/: Cargo.toml
src/cpuid-templates/: Cargo.toml  build.rs
src/cpuid-templates/src/: c3.in  lib.rs  t2.in  t2s.in
src/cpuid-templates/templates/: c3.json  t2.json  t2s.json
src/cpuid/src/: bit_helper.rs  brand_string.rs  common.rs  cpuid_ffi.rs  lib.rs
src/cpuid/src/amd/: mod.rs
src/cpuid/src/intel/: indexing.rs  leaves.rs  mod.rs  registers.rs
src/guest_config/: Cargo.toml
src/guest_config/src/: lib.rs
src/guest_config/src/cpu/: cpu_config.rs
src/guest_config/tests/: guest_config_integration_test.rs
src/logger/src/: logger.rs  metrics.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  persist.rs  resources.rs  rpc_interface.rs
src/vmm/src/guest_config/: mod.rs
src/vmm/src/guest_config/aarch/: mod.rs
src/vmm/src/guest_config/aarch64/: mod.rs
src/vmm/src/guest_config/templates/: mod.rs
src/vmm/src/guest_config/x86/: mod.rs
src/vmm/src/guest_config/x86_64/: mod.rs
src/vmm/src/vmm_config/: machine_config.rs  mod.rs
src/vmm/src/vstate/vcpu/: mod.rs  x86_64.rs
src/vmm/src/vstate/vcpu/x86_64/: mod.rs
src/vmm/tests/: integration_tests.rs
tests/framework/: dependencies.txt  microvm.py  resources.py
tests/framework/resources/: cpu_template_t2_example.json
tests/integration_tests/functional/: test_api.py  test_cpu_config.py
